All local database operation Add, update, delete done Logout api done Refer done

--- a/app/src/main/res/layout/activity_add_case.xml
+++ b/app/src/main/res/layout/activity_add_case.xml
@@ -121,6 +121,7 @@
                         android:id="@+id/EditTextCaseCNRNummber"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:inputType="number"
                         android:hint="Case CNR number"
                         android:maxLines="1" />
 
@@ -137,6 +138,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Case register number"
+                        android:inputType="number"
                         android:maxLines="1" />
 
                 </android.support.design.widget.TextInputLayout>
