--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -50,7 +50,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:text="Rahul B Kalamkar"
                     android:textColor="#777777"
                     android:textSize="16sp" />
 
@@ -73,7 +72,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:text="rahulbkalamkar@gmail.com"
                     android:textColor="#777777"
                     android:textSize="16sp" />
 
@@ -96,7 +94,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:text="+91 9762 99 3179"
                     android:textColor="#777777"
                     android:textSize="16sp" />
 
@@ -119,7 +116,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:text="101, Guru krupa building, Navghar Lane-1 Mulund East"
                     android:textColor="#777777"
                     android:textSize="16sp" />
 
@@ -142,7 +138,8 @@
                 style="?android:attr/progressBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true" />
+                android:layout_centerInParent="true"
+                android:visibility="gone"/>
         </RelativeLayout>
 
     </LinearLayout>
