--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -20,32 +20,51 @@
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="1">
 
-        <EditText
-            android:id="@+id/edtTextOldPassword"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/edtTextOldPasswordError"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/enter_password"
-            android:inputType="textPassword"
-            android:maxLines="1"
-            android:singleLine="true" />
+            app:errorEnabled="true">
 
-        <EditText
-            android:id="@+id/edtTextNewPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/enter_new_password"
-            android:inputType="textPassword"
-            android:maxLines="1"
-            android:singleLine="true" />
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/edtTextOldPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/enter_password"
+                android:inputType="textPassword"
+                android:maxLines="1" />
+        </android.support.design.widget.TextInputLayout>
 
-        <EditText
-            android:id="@+id/edtTextNewPasswordConfirm"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/edtTextNewPasswordError"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/confirm_new_password"
-            android:inputType="textPassword"
-            android:maxLines="1"
-            android:singleLine="true" />
+            app:errorEnabled="true">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/edtTextNewPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/enter_password"
+                android:inputType="textPassword"
+                android:maxLines="1" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/edtTextNewPasswordConfirmError"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:errorEnabled="true">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/edtTextNewPasswordConfirm"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/confirm_new_password"
+                android:inputType="textPassword"
+                android:maxLines="1" />
+        </android.support.design.widget.TextInputLayout>
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
