--- a/app/src/main/res/layout/fragment_court.xml
+++ b/app/src/main/res/layout/fragment_court.xml
@@ -10,16 +10,16 @@
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:scrollbars="none"/>
+        android:scrollbars="none" />
 
     <TextView
+        android:id="@+id/textViewErrorText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="There is no court added yet!"
-        android:visibility="gone"
-        android:id="@+id/textViewErrorText"
-        android:textColor="#000000"/>
+        android:textColor="#000000"
+        android:visibility="gone" />
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -27,6 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_centerVertical="true" />
+        android:layout_centerVertical="true"
+        android:visibility="gone" />
 
 </RelativeLayout>
