--- a/app/src/main/res/layout/today_case_item.xml
+++ b/app/src/main/res/layout/today_case_item.xml
@@ -1,55 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.singular.barrister.Util.CarouselLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/root_container"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/transparent"
-    android:gravity="center"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/textViewClientOne"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal"
-        android:background="@drawable/case_gradient"
-        android:orientation="vertical"
-        android:padding="@dimen/fab_margin">
+        android:text="Rahul Kalamkar"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+    <!--<LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="5">
 
         <TextView
             android:id="@+id/textViewClientOne"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="#ffffff"
-            android:textSize="16sp" />
+            android:layout_weight="2"
+            android:text="Rahul Kalamkar"
+            android:textColor="#000000"
+            android:textSize="20sp" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
             android:text="VS"
-            android:textColor="#ffffff"
-            android:textSize="16sp" />
+            android:textColor="#ff0000"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textViewClientTwo"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="#ffffff"
-            android:textSize="16sp" />
+            android:layout_weight="2"
+            android:text="Hungama"
+            android:textColor="#000000"
+            android:textSize="20sp"/>
+    </LinearLayout>-->
 
-        <TextView
-            android:id="@+id/textViewCourtName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#ffffff"
-            android:textSize="16sp" />
+    <TextView
+        android:id="@+id/textViewCourtName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Mumbai high court"
+        android:textColor="#777777"
+        android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/textViewCourtAddress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#ffffff"
-            android:textSize="16sp" />
+    <TextView
+        android:id="@+id/textViewCourtAddress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Mumbai"
+        android:textColor="#888888"
+        android:textSize="16sp" />
 
-    </LinearLayout>
-</com.singular.barrister.Util.CarouselLinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.2dp"
+        android:layout_marginTop="@dimen/fab_margin"
+        android:background="#99777777"
+        android:layout_marginBottom="@dimen/fab_margin"/>
+
+</LinearLayout>
