--- a/app/src/main/res/layout/important_link.xml
+++ b/app/src/main/res/layout/important_link.xml
@@ -1,25 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/fab_margin">
 
-    <EditText
-        android:id="@+id/editTextWebSiteName"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/editTextWebSiteNameError"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Website name"
-        android:inputType="textPersonName"
-        android:maxLines="1"
-        android:singleLine="true" />
+        app:errorEnabled="true">
 
-    <EditText
-        android:id="@+id/editTextWebSiteUrl"
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/editTextWebSiteName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Website name"
+            android:maxLines="1" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/editTextWebSiteUrlError"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Website url"
-        android:inputType="textPersonName" />
+        app:errorEnabled="true">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/editTextWebSiteUrl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Website url" />
+
+    </android.support.design.widget.TextInputLayout>
 </LinearLayout>
