--- a/app/src/main/res/layout/change_case_status_window.xml
+++ b/app/src/main/res/layout/change_case_status_window.xml
@@ -2,81 +2,78 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#99777777"
+    android:orientation="vertical"
     android:padding="@dimen/fab_margin">
 
-<android.support.constraint.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#FAFAFA"
-    android:padding="@dimen/fab_margin"
-    android:foregroundGravity="center"
-    tools:layout_constraintRight_creator="1"
-    tools:layout_constraintBottom_creator="1"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    tools:layout_constraintLeft_creator="1"
-    android:layout_marginBottom="160dp"
-    app:layout_constraintLeft_toLeftOf="parent"
-    android:layout_marginRight="8dp"
-    android:layout_centerInParent="true"
-    android:layout_marginLeft="8dp">
-    <RadioGroup
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/radioGroup">
-        <RadioButton
-            android:id="@+id/radioButton1"
+        android:layout_centerInParent="true"
+        android:background="#ffffff"
+        android:orientation="vertical"
+        android:padding="@dimen/fab_margin">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Change Status"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <RadioGroup
+            android:id="@+id/radioGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="In-Progress"
-            android:textSize="18sp"
-            android:textColor="#000000"/>
-        <RadioButton
-            android:id="@+id/radioButton2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Completed"
-            android:textSize="18sp"
-            android:textColor="#000000"/>
-    </RadioGroup>
+            android:layout_marginTop="@dimen/fab_margin">
 
-    <Button
-        android:id="@+id/buttonSave"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Save"
-        android:layout_marginRight="16dp"
-        android:background="@color/colorPrimary"
-        android:textColor="#ffffff"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
-        android:layout_marginEnd="16dp" />
+            <RadioButton
+                android:id="@+id/radioButton1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="In-Progress"
+                android:textColor="#000000"
+                android:textSize="18sp" />
 
-    <Button
-        android:id="@+id/buttonCancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Cancel"
-        android:background="@color/colorPrimary"
-        android:textColor="#ffffff"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/buttonSave"
-        android:layout_marginRight="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp" />
-</android.support.constraint.ConstraintLayout>
+            <RadioButton
+                android:id="@+id/radioButton2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Completed"
+                android:textColor="#000000"
+                android:textSize="18sp" />
+        </RadioGroup>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/buttonSave"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:background="@android:color/transparent"
+                android:text="Save"
+                android:textColor="@color/colorPrimary" />
+
+            <Button
+                android:id="@+id/buttonCancel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_toLeftOf="@+id/buttonSave"
+                android:layout_toStartOf="@+id/buttonSave"
+                android:background="@android:color/transparent"
+                android:text="Cancel"
+                android:textColor="@color/colorPrimary"
+                app:layout_constraintRight_toLeftOf="@+id/buttonSave" />
+        </RelativeLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
