--- a/app/src/main/res/layout/court_list_item.xml
+++ b/app/src/main/res/layout/court_list_item.xml
@@ -44,19 +44,21 @@
             android:id="@+id/textViewCourtName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-medium"
             android:text="Rahul Kalamkar"
             android:textColor="#000000"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            />
 
         <TextView
             android:id="@+id/textViewState"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
+            android:fontFamily="sans-serif"
             android:text="Jalna"
             android:textColor="#777777"
-            android:textSize="16sp" />
+            android:textSize="14sp" />
 
         <View
             android:layout_width="match_parent"
