--- a/app/src/main/res/layout/simple_list.xml
+++ b/app/src/main/res/layout/simple_list.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#99777777"
     android:orientation="vertical"
     android:padding="@dimen/fab_margin">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/pop_background"
+        android:layout_centerInParent="true"
+        android:background="#ffffff"
         android:orientation="vertical"
         android:padding="@dimen/fab_margin">
 
@@ -16,28 +18,28 @@
             android:id="@+id/menuDeleteButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/button_click_transperent"
             android:paddingLeft="@dimen/fab_margin"
             android:paddingRight="@dimen/fab_margin"
             android:text="Delete"
-            android:background="@drawable/button_click_transperent"
             android:textColor="#000000"
             android:textSize="18sp" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="0.2dp"
-            android:background="@color/colorPrimary"
-            android:layout_marginTop="@dimen/fab_margin"/>
+            android:layout_marginTop="@dimen/fab_margin"
+            android:background="@color/colorPrimary" />
 
         <TextView
             android:id="@+id/menuCallButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:background="@drawable/button_click_transperent"
             android:paddingLeft="@dimen/fab_margin"
             android:paddingRight="@dimen/fab_margin"
             android:text="Call"
-            android:background="@drawable/button_click_transperent"
             android:textColor="#000000"
             android:textSize="18sp" />
 
@@ -45,19 +47,19 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="0.2dp"
-            android:background="@color/colorPrimary"
-            android:layout_marginTop="@dimen/fab_margin" />
+            android:layout_marginTop="@dimen/fab_margin"
+            android:background="@color/colorPrimary" />
 
         <TextView
             android:id="@+id/menuMessageButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:background="@drawable/button_click_transperent"
             android:paddingLeft="@dimen/fab_margin"
             android:paddingRight="@dimen/fab_margin"
             android:text="Message"
-            android:background="@drawable/button_click_transperent"
             android:textColor="#000000"
             android:textSize="18sp" />
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
