--- a/app/src/main/res/layout/activity_add_client.xml
+++ b/app/src/main/res/layout/activity_add_client.xml
@@ -49,6 +49,7 @@
                 android:hint="Phone"
                 android:inputType="phone"
                 android:maxLines="1"
+                android:maxLength="10"
                 android:singleLine="true" />
 
             <EditText
