Inner activity added

--- a/app/src/main/res/layout/activity_select_case_type.xml
+++ b/app/src/main/res/layout/activity_select_case_type.xml
@@ -3,11 +3,10 @@
     android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FAFAFA"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    android:orientation="vertical"
-    android:background="#FAFAFA"
-    android:padding="@dimen/fab_margin">
+    android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycleView"
