--- a/app/src/main/res/layout/activity_select_state.xml
+++ b/app/src/main/res/layout/activity_select_state.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FAFAFA"
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:orientation="vertical"
-    android:background="#FAFAFA"
     android:padding="@dimen/fab_margin">
 
     <android.support.v7.widget.RecyclerView
@@ -14,4 +14,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FAFAFA" />
-</LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBar5"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
+</RelativeLayout>
