--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -63,45 +63,59 @@
                         android:layout_toRightOf="@+id/imageView"
                         android:orientation="vertical">
 
-                        <TextView
+                        <LinearLayout
+                            android:id="@+id/textViewFirstNumber"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:paddingLeft="10dp"
-                            android:paddingTop="10dp"
-                            android:text="+91 9724283616"
-                            android:textColor="#000000"
-                            android:textSize="16sp" />
+                            android:orientation="vertical">
 
-                        <TextView
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:paddingLeft="10dp"
+                                android:paddingTop="10dp"
+                                android:text="+91 9724283616"
+                                android:textColor="#000000"
+                                android:textSize="16sp" />
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="10dp"
+                                android:text="Mobile"
+                                android:textColor="#777777"
+                                android:textSize="12sp" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/textViewSecondNumber"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
-                            android:text="Mobile"
-                            android:textColor="#777777"
-                            android:textSize="12sp" />
+                            android:orientation="vertical">
 
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:paddingLeft="10dp"
-                            android:paddingTop="10dp"
-                            android:text="+91 8980899345"
-                            android:textColor="#000000"
-                            android:textSize="16sp" />
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:paddingLeft="10dp"
+                                android:paddingTop="10dp"
+                                android:text="+91 8980899345"
+                                android:textColor="#000000"
+                                android:textSize="16sp" />
 
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
-                            android:text="Mobile"
-                            android:textColor="#777777"
-                            android:textSize="12sp" />
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="10dp"
+                                android:text="Mobile"
+                                android:textColor="#777777"
+                                android:textSize="12sp" />
 
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="0.2dp"
-                            android:layout_marginTop="10dp"
-                            android:background="#777777" />
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="0.2dp"
+                                android:layout_marginTop="10dp"
+                                android:background="#777777" />
+                        </LinearLayout>
                     </LinearLayout>
                 </RelativeLayout>
 
@@ -125,6 +139,7 @@
                     android:visibility="gone" />
 
                 <RelativeLayout
+                    android:id="@+id/relativeLayoutEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
@@ -134,7 +149,7 @@
                         android:layout_height="36dp"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentTop="true"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="@dimen/fab_margin"
                         android:src="@mipmap/ic_green_mail_icon" />
 
                     <LinearLayout
@@ -147,43 +162,20 @@
 
                         <TextView
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="36dp"
+                            android:layout_marginTop="@dimen/fab_margin"
+                            android:gravity="center_vertical"
                             android:paddingLeft="10dp"
-                            android:paddingTop="10dp"
-                            android:text="vermamukesh67@gmail.com"
+                            android:text="barristerapp@gmail.com"
                             android:textColor="#000000"
                             android:textSize="16sp" />
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
-                            android:text="Personal"
-                            android:textColor="#777777"
-                            android:textSize="12sp" />
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:paddingLeft="10dp"
-                            android:paddingTop="10dp"
-                            android:text="palanpur49@gmail.com"
-                            android:textColor="#000000"
-                            android:textSize="16sp" />
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
-                            android:text="Personal"
-                            android:textColor="#777777"
-                            android:textSize="12sp" />
 
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="0.2dp"
                             android:layout_marginTop="10dp"
-                            android:background="#777777" />
+                            android:background="#777777"
+                            android:visibility="gone" />
                     </LinearLayout>
                 </RelativeLayout>
             </LinearLayout>
