--- a/app/src/main/res/layout/date_picker_layout.xml
+++ b/app/src/main/res/layout/date_picker_layout.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:background="@color/colorAccent_Refer">
+        android:background="#55888888">
 
         <RelativeLayout
             android:id="@+id/pickerLayout"
@@ -46,7 +46,7 @@
             android:padding="@dimen/fab_margin"
             android:text="OK"
             android:background="@android:color/transparent"
-            android:textColor="#000000"
+            android:textColor="@color/colorPrimary"
             android:textSize="16sp" />
 
         <Button
@@ -58,7 +58,7 @@
             android:layout_toStartOf="@+id/textViewSave"
             android:padding="@dimen/fab_margin"
             android:text="CANCEL"
-            android:textColor="#000000"
+            android:textColor="@color/colorPrimary"
             android:background="@android:color/transparent"
             android:textSize="16sp" />
     </RelativeLayout>
