--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -67,6 +67,7 @@
                             android:id="@+id/textViewFirstNumber"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:background="@drawable/ripple"
                             android:orientation="vertical">
 
                             <TextView
@@ -91,6 +92,7 @@
                             android:id="@+id/textViewSecondNumber"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:background="@drawable/ripple"
                             android:orientation="vertical">
 
                             <TextView
@@ -141,7 +143,8 @@
                 <RelativeLayout
                     android:id="@+id/relativeLayoutEmail"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ripple">
 
                     <ImageView
                         android:id="@+id/imageView1"
