--- a/app/src/main/res/layout/client_list_adapter.xml
+++ b/app/src/main/res/layout/client_list_adapter.xml
@@ -10,6 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/ripple"
         android:orientation="vertical">
 
         <LinearLayout
@@ -35,7 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
-                android:background="#FAFAFA"
+                android:background="@drawable/ripple"
                 android:orientation="vertical"
                 android:padding="5dp">
 
