--- a/app/src/main/res/layout/court_list_item.xml
+++ b/app/src/main/res/layout/court_list_item.xml
@@ -10,7 +10,8 @@
     <RelativeLayout
         android:id="@+id/view_background"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -37,7 +38,7 @@
         android:id="@+id/view_foreground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FAFAFA"
+        android:background="@drawable/ripple"
         android:orientation="vertical">
 
         <TextView
@@ -47,8 +48,7 @@
             android:fontFamily="sans-serif-medium"
             android:text="Rahul Kalamkar"
             android:textColor="#000000"
-            android:textSize="16sp"
-            />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/textViewState"
