--- a/app/src/main/res/layout/state_item.xml
+++ b/app/src/main/res/layout/state_item.xml
@@ -2,17 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/ripple"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/textViewName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="8dp"
         android:textColor="#000000"
-        android:textSize="16sp"
-        android:padding="8dp"/>
+        android:textSize="16sp" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="0.2dp"
-        android:background="#99777777"/>
+        android:background="#99777777" />
 </LinearLayout>
