--- a/app/src/main/res/layout/edit_profile_fragment.xml
+++ b/app/src/main/res/layout/edit_profile_fragment.xml
@@ -24,6 +24,7 @@
             android:layout_height="wrap_content"
             android:singleLine="true"
             android:maxLines="1"
+            android:inputType="textNoSuggestions|textCapWords|textCapSentences"
             android:paddingLeft="0dp"
             android:text="Rahul"
             android:textColor="#777777"
@@ -48,6 +49,7 @@
             android:layout_height="wrap_content"
             android:singleLine="true"
             android:maxLines="1"
+            android:inputType="textNoSuggestions|textCapWords|textCapSentences"
             android:text="Kalamkar"
             android:textColor="#777777"
             android:paddingLeft="0dp"
