--- a/app/src/main/res/layout/activity_add_court.xml
+++ b/app/src/main/res/layout/activity_add_court.xml
@@ -50,6 +50,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Court name"
+                        android:inputType="textNoSuggestions|textCapWords|textCapSentences"
                         android:maxLines="1" />
 
                 </android.support.design.widget.TextInputLayout>
@@ -82,6 +83,7 @@
                         android:layout_height="wrap_content"
                         android:focusable="false"
                         android:hint="Court type"
+                        android:inputType="textNoSuggestions|textCapWords|textCapSentences"
                         android:maxLines="1" />
 
                 </android.support.design.widget.TextInputLayout>
@@ -98,6 +100,7 @@
                         android:layout_height="wrap_content"
                         android:focusable="false"
                         android:hint="State"
+                        android:inputType="textNoSuggestions|textCapWords|textCapSentences"
                         android:maxLines="1" />
 
                 </android.support.design.widget.TextInputLayout>
@@ -114,6 +117,7 @@
                         android:layout_height="wrap_content"
                         android:focusable="false"
                         android:hint="District"
+                        android:inputType="textNoSuggestions|textCapWords|textCapSentences"
                         android:maxLines="1" />
 
                 </android.support.design.widget.TextInputLayout>
@@ -130,6 +134,7 @@
                         android:layout_height="wrap_content"
                         android:focusable="false"
                         android:hint="Sub district"
+                        android:inputType="textNoSuggestions|textCapWords|textCapSentences"
                         android:maxLines="1" />
 
                 </android.support.design.widget.TextInputLayout>
