--- a/app/src/main/res/layout/activity_cases_sub.xml
+++ b/app/src/main/res/layout/activity_cases_sub.xml
@@ -44,6 +44,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:focusable="false"
+                    android:inputType="textNoSuggestions|textCapWords|textCapSentences"
                     android:hint="Next Hearing Date"
                     android:maxLines="1" />
 
@@ -59,6 +60,7 @@
                     android:id="@+id/editTextCaseNotes"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:inputType="textNoSuggestions|textCapWords|textCapSentences"
                     android:hint="Case Notes"/>
 
             </android.support.design.widget.TextInputLayout>
