--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -53,6 +53,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/hint_email_id"
+                    android:inputType="textNoSuggestions|textCapWords|textCapSentences"
                     android:maxLines="1" />
 
             </android.support.design.widget.TextInputLayout>
@@ -115,6 +116,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/hint_referral_code"
+                    android:inputType="textNoSuggestions|textCapWords|textCapSentences"
                     android:maxLines="1" />
 
             </android.support.design.widget.TextInputLayout>
