--- a/app/src/main/res/drawable/circle_green.xml
+++ b/app/src/main/res/drawable/circle_green.xml
@@ -3,7 +3,7 @@
     android:shape="oval">
     <corners android:radius="100dp" />
     <gradient
-        android:startColor="#66ff0000"
-        android:endColor="#22ff0000"
+        android:startColor="#66ff33"
+        android:endColor="#009933"
         android:angle="-270" />
 </shape>
