--- a/app/src/main/res/layout/activity_sign_in_account.xml
+++ b/app/src/main/res/layout/activity_sign_in_account.xml
@@ -10,9 +10,9 @@
     <android.support.design.widget.TextInputLayout
         android:id="@+id/editTextNumberError"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_height="wrap_content"
         app:errorEnabled="true">
 
         <android.support.design.widget.TextInputEditText
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/hint_number"
             android:inputType="phone"
+            android:maxLength="10"
             android:maxLines="1" />
 
     </android.support.design.widget.TextInputLayout>
@@ -37,8 +38,8 @@
             android:id="@+id/editTextPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
             android:hint="@string/hint_password"
+            android:inputType="textPassword"
             android:maxLines="1" />
 
     </android.support.design.widget.TextInputLayout>
