--- a/app/src/main/res/layout/client_list_adapter.xml
+++ b/app/src/main/res/layout/client_list_adapter.xml
@@ -23,7 +23,7 @@
                 android:layout_height="48dp"
                 android:layout_alignParentLeft="true"
                 android:layout_gravity="center"
-                android:background="@drawable/circle_red"
+                android:background="@drawable/circle_green"
                 android:gravity="center"
                 android:text="RK"
                 android:textColor="#ffffff"
